CDQL/src/editor/CdqlParser.js
// Generated from Cdql.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "Cdql.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'tbd'", "'time'", "'aFunction'", "'sFunction'", 
                     "'is on'", "'{'", "'}'", "'['", "']'", "'weight'", 
                     "'ranges'", "'belief'", "'value'", "';'", "'://'", 
                     "'?'", "'&'", "'true'", "'false'", "'title'", "'package'", 
                     "'function'", "'create'", "'set'", "'alter'", "'drop'", 
                     "'define'", "'context entity'", "'is from'", "'where'", 
                     "'when'", "'date'", "'lifetime'", "'between'", "'is'", 
                     "'pull'", "'entity'", "'as'", "'every'", "'until'", 
                     "'('", "','", "')'", "'.'", null, null, null, "'xor'", 
                     "'in'", "'containsAny'", "'containsAll'", "'null'", 
                     "'='", "'<'", "'>'", "'<='", "'>='", "'!='", "'push'", 
                     "'into'", "'prefix'", "'http/post'", "'post'", "'method'", 
                     "'url'", "'fcm'", "'topic'", "'token'", "'type'", "':'", 
                     "'*'", null, "'occurences'", "'/'", "'$op'", "'output'", 
                     "'callback'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, "TITLE", "PACKAGE", "FUNCTION", "CREATE", 
                      "SET", "ALTER", "DROP", "DEFINE", "CONTEXT_ENTITY", 
                      "IS_FROM", "WHERE", "WHEN", "DATE", "LIFETIME", "BETWEEN", 
                      "IS", "PULL", "ENTITY", "AS", "EVERY", "UNTIL", "LPAREN", 
                      "COMMA", "RPAREN", "DOT", "NOT", "AND", "OR", "XOR", 
                      "IN", "CONTAINS_ANY", "CONTAINS_ALL", "NULL", "EQ", 
                      "LTH", "GTH", "LET", "GET", "NOT_EQ", "PUSH", "INTO", 
                      "PREFIX", "HTTPPOST", "POST", "METHOD", "URL", "FCM", 
                      "TOPIC", "TOKEN", "TYPE", "COLON", "ASTERISK", "UNIT_OF_TIME", 
                      "OCCURRENCES", "FSLASH", "OP", "OUTPUT", "CALLBACK", 
                      "TIME_ZONE", "STRING", "ID", "ATTRIBUTEID", "COMMENT", 
                      "WS", "NUMBER", "INT", "HEX" ];

var ruleNames =  [ "rule_Cdql", "rule_ddl_statement", "rule_dml_statement", 
                   "rule_query", "rule_create_function", "rule_set_package", 
                   "rule_create_package", "rule_alter_package", "rule_alter_function", 
                   "rule_drop_package", "rule_drop_function", "rule_package_title", 
                   "rule_Set_Config", "rule_Set_Callback", "rule_Output_Config", 
                   "rule_Callback_Config", "rule_Prefixs", "rule_Prefix", 
                   "rule_Pull", "rule_Select", "rule_select_Attribute", 
                   "rule_select_FunctionCall", "rule_Attribute", "rule_EntityTitle", 
                   "rule_AttributeTitle", "rule_FunctionCall", "rule_function_call_method_chaining", 
                   "rule_call_FunctionTitle", "rule_call_Operand", "rule_Name_Operand", 
                   "rule_FunctionTitle", "rule_Operand", "rule_ContextValue", 
                   "rule_When", "rule_repeat", "rule_Start", "rule_Date_Time_When", 
                   "rule_Occurrence", "rule_Date_Time", "rule_Date", "rule_Time", 
                   "rule_Condition", "rule_expr_op", "rule_Constraint", 
                   "rule_left_element", "rule_right_element", "rule_target_element", 
                   "rule_relational_op_func", "rule_relational_op", "rule_between_op", 
                   "rule_is_or_is_not", "ruel_Push", "rule_callback", "rule_http_calback", 
                   "rule_fcm_calback", "rule_fcm_topic", "rule_fcm_token", 
                   "rule_callback_url", "rule_Define", "rule_Define_Context_Entity", 
                   "rule_context_entity", "rule_entity_type", "rule_Define_Context_Function", 
                   "rule_context_function", "rule_aFunction", "rule_sFunction", 
                   "rule_is_on", "rule_is_on_entity", "cst_situation_def_rule", 
                   "rule_single_situatuin", "rule_situation_pair", "rule_situation_attributes", 
                   "rule_situation_attribute_name", "situation_pair_values", 
                   "situation_weight", "situation_range_values", "situation_pair_values_item", 
                   "rule_situation_belief", "rule_situation_value", "rule_discrete_value", 
                   "discrete_value", "rule_region_value", "region_value_inclusive", 
                   "region_value_left_inclusive", "region_value_right_inclusive", 
                   "region_value_exclusive", "region_value_value", "rule_entity_id", 
                   "rule_function_id", "rule_url", "authority", "host", 
                   "hostname", "hostnumber", "search", "searchparameter", 
                   "port", "path", "normal_path", "path_param", "json", 
                   "obj", "pair", "array", "value" ];

function CdqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CdqlParser.prototype = Object.create(antlr4.Parser.prototype);
CdqlParser.prototype.constructor = CdqlParser;

Object.defineProperty(CdqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CdqlParser.EOF = antlr4.Token.EOF;
CdqlParser.T__0 = 1;
CdqlParser.T__1 = 2;
CdqlParser.T__2 = 3;
CdqlParser.T__3 = 4;
CdqlParser.T__4 = 5;
CdqlParser.T__5 = 6;
CdqlParser.T__6 = 7;
CdqlParser.T__7 = 8;
CdqlParser.T__8 = 9;
CdqlParser.T__9 = 10;
CdqlParser.T__10 = 11;
CdqlParser.T__11 = 12;
CdqlParser.T__12 = 13;
CdqlParser.T__13 = 14;
CdqlParser.T__14 = 15;
CdqlParser.T__15 = 16;
CdqlParser.T__16 = 17;
CdqlParser.T__17 = 18;
CdqlParser.T__18 = 19;
CdqlParser.TITLE = 20;
CdqlParser.PACKAGE = 21;
CdqlParser.FUNCTION = 22;
CdqlParser.CREATE = 23;
CdqlParser.SET = 24;
CdqlParser.ALTER = 25;
CdqlParser.DROP = 26;
CdqlParser.DEFINE = 27;
CdqlParser.CONTEXT_ENTITY = 28;
CdqlParser.IS_FROM = 29;
CdqlParser.WHERE = 30;
CdqlParser.WHEN = 31;
CdqlParser.DATE = 32;
CdqlParser.LIFETIME = 33;
CdqlParser.BETWEEN = 34;
CdqlParser.IS = 35;
CdqlParser.PULL = 36;
CdqlParser.ENTITY = 37;
CdqlParser.AS = 38;
CdqlParser.EVERY = 39;
CdqlParser.UNTIL = 40;
CdqlParser.LPAREN = 41;
CdqlParser.COMMA = 42;
CdqlParser.RPAREN = 43;
CdqlParser.DOT = 44;
CdqlParser.NOT = 45;
CdqlParser.AND = 46;
CdqlParser.OR = 47;
CdqlParser.XOR = 48;
CdqlParser.IN = 49;
CdqlParser.CONTAINS_ANY = 50;
CdqlParser.CONTAINS_ALL = 51;
CdqlParser.NULL = 52;
CdqlParser.EQ = 53;
CdqlParser.LTH = 54;
CdqlParser.GTH = 55;
CdqlParser.LET = 56;
CdqlParser.GET = 57;
CdqlParser.NOT_EQ = 58;
CdqlParser.PUSH = 59;
CdqlParser.INTO = 60;
CdqlParser.PREFIX = 61;
CdqlParser.HTTPPOST = 62;
CdqlParser.POST = 63;
CdqlParser.METHOD = 64;
CdqlParser.URL = 65;
CdqlParser.FCM = 66;
CdqlParser.TOPIC = 67;
CdqlParser.TOKEN = 68;
CdqlParser.TYPE = 69;
CdqlParser.COLON = 70;
CdqlParser.ASTERISK = 71;
CdqlParser.UNIT_OF_TIME = 72;
CdqlParser.OCCURRENCES = 73;
CdqlParser.FSLASH = 74;
CdqlParser.OP = 75;
CdqlParser.OUTPUT = 76;
CdqlParser.CALLBACK = 77;
CdqlParser.TIME_ZONE = 78;
CdqlParser.STRING = 79;
CdqlParser.ID = 80;
CdqlParser.ATTRIBUTEID = 81;
CdqlParser.COMMENT = 82;
CdqlParser.WS = 83;
CdqlParser.NUMBER = 84;
CdqlParser.INT = 85;
CdqlParser.HEX = 86;

CdqlParser.RULE_rule_Cdql = 0;
CdqlParser.RULE_rule_ddl_statement = 1;
CdqlParser.RULE_rule_dml_statement = 2;
CdqlParser.RULE_rule_query = 3;
CdqlParser.RULE_rule_create_function = 4;
CdqlParser.RULE_rule_set_package = 5;
CdqlParser.RULE_rule_create_package = 6;
CdqlParser.RULE_rule_alter_package = 7;
CdqlParser.RULE_rule_alter_function = 8;
CdqlParser.RULE_rule_drop_package = 9;
CdqlParser.RULE_rule_drop_function = 10;
CdqlParser.RULE_rule_package_title = 11;
CdqlParser.RULE_rule_Set_Config = 12;
CdqlParser.RULE_rule_Set_Callback = 13;
CdqlParser.RULE_rule_Output_Config = 14;
CdqlParser.RULE_rule_Callback_Config = 15;
CdqlParser.RULE_rule_Prefixs = 16;
CdqlParser.RULE_rule_Prefix = 17;
CdqlParser.RULE_rule_Pull = 18;
CdqlParser.RULE_rule_Select = 19;
CdqlParser.RULE_rule_select_Attribute = 20;
CdqlParser.RULE_rule_select_FunctionCall = 21;
CdqlParser.RULE_rule_Attribute = 22;
CdqlParser.RULE_rule_EntityTitle = 23;
CdqlParser.RULE_rule_AttributeTitle = 24;
CdqlParser.RULE_rule_FunctionCall = 25;
CdqlParser.RULE_rule_function_call_method_chaining = 26;
CdqlParser.RULE_rule_call_FunctionTitle = 27;
CdqlParser.RULE_rule_call_Operand = 28;
CdqlParser.RULE_rule_Name_Operand = 29;
CdqlParser.RULE_rule_FunctionTitle = 30;
CdqlParser.RULE_rule_Operand = 31;
CdqlParser.RULE_rule_ContextValue = 32;
CdqlParser.RULE_rule_When = 33;
CdqlParser.RULE_rule_repeat = 34;
CdqlParser.RULE_rule_Start = 35;
CdqlParser.RULE_rule_Date_Time_When = 36;
CdqlParser.RULE_rule_Occurrence = 37;
CdqlParser.RULE_rule_Date_Time = 38;
CdqlParser.RULE_rule_Date = 39;
CdqlParser.RULE_rule_Time = 40;
CdqlParser.RULE_rule_Condition = 41;
CdqlParser.RULE_rule_expr_op = 42;
CdqlParser.RULE_rule_Constraint = 43;
CdqlParser.RULE_rule_left_element = 44;
CdqlParser.RULE_rule_right_element = 45;
CdqlParser.RULE_rule_target_element = 46;
CdqlParser.RULE_rule_relational_op_func = 47;
CdqlParser.RULE_rule_relational_op = 48;
CdqlParser.RULE_rule_between_op = 49;
CdqlParser.RULE_rule_is_or_is_not = 50;
CdqlParser.RULE_ruel_Push = 51;
CdqlParser.RULE_rule_callback = 52;
CdqlParser.RULE_rule_http_calback = 53;
CdqlParser.RULE_rule_fcm_calback = 54;
CdqlParser.RULE_rule_fcm_topic = 55;
CdqlParser.RULE_rule_fcm_token = 56;
CdqlParser.RULE_rule_callback_url = 57;
CdqlParser.RULE_rule_Define = 58;
CdqlParser.RULE_rule_Define_Context_Entity = 59;
CdqlParser.RULE_rule_context_entity = 60;
CdqlParser.RULE_rule_entity_type = 61;
CdqlParser.RULE_rule_Define_Context_Function = 62;
CdqlParser.RULE_rule_context_function = 63;
CdqlParser.RULE_rule_aFunction = 64;
CdqlParser.RULE_rule_sFunction = 65;
CdqlParser.RULE_rule_is_on = 66;
CdqlParser.RULE_rule_is_on_entity = 67;
CdqlParser.RULE_cst_situation_def_rule = 68;
CdqlParser.RULE_rule_single_situatuin = 69;
CdqlParser.RULE_rule_situation_pair = 70;
CdqlParser.RULE_rule_situation_attributes = 71;
CdqlParser.RULE_rule_situation_attribute_name = 72;
CdqlParser.RULE_situation_pair_values = 73;
CdqlParser.RULE_situation_weight = 74;
CdqlParser.RULE_situation_range_values = 75;
CdqlParser.RULE_situation_pair_values_item = 76;
CdqlParser.RULE_rule_situation_belief = 77;
CdqlParser.RULE_rule_situation_value = 78;
CdqlParser.RULE_rule_discrete_value = 79;
CdqlParser.RULE_discrete_value = 80;
CdqlParser.RULE_rule_region_value = 81;
CdqlParser.RULE_region_value_inclusive = 82;
CdqlParser.RULE_region_value_left_inclusive = 83;
CdqlParser.RULE_region_value_right_inclusive = 84;
CdqlParser.RULE_region_value_exclusive = 85;
CdqlParser.RULE_region_value_value = 86;
CdqlParser.RULE_rule_entity_id = 87;
CdqlParser.RULE_rule_function_id = 88;
CdqlParser.RULE_rule_url = 89;
CdqlParser.RULE_authority = 90;
CdqlParser.RULE_host = 91;
CdqlParser.RULE_hostname = 92;
CdqlParser.RULE_hostnumber = 93;
CdqlParser.RULE_search = 94;
CdqlParser.RULE_searchparameter = 95;
CdqlParser.RULE_port = 96;
CdqlParser.RULE_path = 97;
CdqlParser.RULE_normal_path = 98;
CdqlParser.RULE_path_param = 99;
CdqlParser.RULE_json = 100;
CdqlParser.RULE_obj = 101;
CdqlParser.RULE_pair = 102;
CdqlParser.RULE_array = 103;
CdqlParser.RULE_value = 104;

function Rule_CdqlContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CdqlParser.RULE_rule_Cdql;
    return this;
}

Rule_CdqlContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Rule_CdqlContext.prototype.constructor = Rule_CdqlContext;

Rule_CdqlContext.prototype.rule_ddl_statement = function() {
    return this.getTypedRuleContext(Rule_ddl_statementContext,0);
};

Rule_CdqlContext.prototype.rule_dml_statement = function() {
    return this.getTypedRuleContext(Rule_dml_statementContext,0);
};

Rule_CdqlContext.prototype.rule_Prefixs = function() {
    return this.getTypedRuleContext(Rule_PrefixsContext,0);
};




CdqlParser.Rule_CdqlContext = Rule_CdqlContext;

CdqlParser.prototype.rule_Cdql = function() {

    var localctx = new Rule_CdqlContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CdqlParser.RULE_rule_Cdql);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 211;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CdqlParser.PREFIX) {
            this.state = 210;
            this.rule_Prefixs();
        }

        this.state = 215;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case CdqlParser.EOF:
        case CdqlParser.T__0:
        case CdqlParser.CREATE:
        case CdqlParser.ALTER:
        case CdqlParser.DROP:
            this.state = 213;
            this.rule_ddl_statement();
            break;
        case CdqlParser.PULL:
        case CdqlParser.PUSH:
            this.state = 214;
            this.rule_dml_statement();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Rule_ddl_statementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CdqlParser.RULE_rule_ddl_statement;
    return this;
}

Rule_ddl_statementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Rule_ddl_statementContext.prototype.constructor = Rule_ddl_statementContext;

Rule_ddl_statementContext.prototype.rule_create_function = function() {
    return this.getTypedRuleContext(Rule_create_functionContext,0);
};

Rule_ddl_statementContext.prototype.rule_create_package = function() {
    return this.getTypedRuleContext(Rule_create_packageContext,0);
};

Rule_ddl_statementContext.prototype.rule_alter_function = function() {
    return this.getTypedRuleContext(Rule_alter_functionContext,0);
};

Rule_ddl_statementContext.prototype.rule_alter_package = function() {
    return this.getTypedRuleContext(Rule_alter_packageContext,0);
};

Rule_ddl_statementContext.prototype.rule_drop_function = function() {
    return this.getTypedRuleContext(Rule_drop_functionContext,0);
};

Rule_ddl_statementContext.prototype.rule_drop_package = function() {
    return this.getTypedRuleContext(Rule_drop_packageContext,0);
};




CdqlParser.Rule_ddl_statementContext = Rule_ddl_statementContext;

CdqlParser.prototype.rule_ddl_statement = function() {

    var localctx = new Rule_ddl_statementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CdqlParser.RULE_rule_ddl_statement);
    try {
        this.state = 224;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 217;
            this.rule_create_function();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 218;
            this.rule_create_package();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 219;
            this.rule_alter_function();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 220;
            this.rule_alter_package();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 221;
            this.rule_drop_function();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 222;
            this.rule_drop_package();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Rule_dml_statementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CdqlParser.RULE_rule_dml_statement;
    return this;
}

Rule_dml_statementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Rule_dml_statementContext.prototype.constructor = Rule_dml_statementContext;

Rule_dml_statementContext.prototype.rule_query = function() {
    return this.getTypedRuleContext(Rule_queryContext,0);
};




CdqlParser.Rule_dml_statementContext = Rule_dml_statementContext;

CdqlParser.prototype.rule_dml_statement = function() {

    var localctx = new Rule_dml_statementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CdqlParser.RULE_rule_dml_statement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 226;
        this.rule_query();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Rule_queryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CdqlParser.RULE_rule_query;
    return this;
}

Rule_queryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Rule_queryContext.prototype.constructor = Rule_queryContext;

Rule_queryContext.prototype.rule_Define = function() {
    return this.getTypedRuleContext(Rule_DefineContext,0);
};

Rule_queryContext.prototype.rule_Pull = function() {
    return this.getTypedRuleContext(Rule_PullContext,0);
};

Rule_queryContext.prototype.ruel_Push = function() {
    return this.getTypedRuleContext(Ruel_PushContext,0);
};

Rule_queryContext.prototype.rule_When = function() {
    return this.getTypedRuleContext(Rule_WhenContext,0);
};

Rule_queryContext.prototype.rule_Set_Config = function() {
    return this.getTypedRuleContext(Rule_Set_ConfigContext,0);
};

Rule_queryContext.prototype.rule_Set_Callback = function() {
    return this.getTypedRuleContext(Rule_Set_CallbackContext,0);
};

Rule_queryContext.prototype.rule_repeat = function() {
    return this.getTypedRuleContext(Rule_repeatContext,0);
};




CdqlParser.Rule_queryContext = Rule_queryContext;

CdqlParser.prototype.rule_query = function() {

    var localctx = new Rule_queryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CdqlParser.RULE_rule_query);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 234;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case CdqlParser.PULL:
            this.state = 228;
            this.rule_Pull();
            break;
        case CdqlParser.PUSH:
            this.state = 229;
            this.ruel_Push();
            this.state = 230;
            this.rule_When();
            this.state = 232;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===CdqlParser.EVERY || _la===CdqlParser.UNTIL) {
                this.state = 231;
                this.rule_repeat();
            }

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 236;
        this.rule_Define();
        this.state = 238;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        if(la_===1) {
            this.state = 237;
            this.rule_Set_Config();

        }
        this.state = 241;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CdqlParser.SET) {
            this.state = 240;
            this.rule_Set_Callback();
        }
